--- a/todoc-master/app/build.gradle
+++ b/todoc-master/app/build.gradle
@@ -35,8 +35,8 @@ dependencies {
 
     def room_version = "2.4.0"
     //noinspection GradleDependency
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:2.4.1"
+    annotationProcessor "androidx.room:room-compiler:2.4.1"
     implementation 'com.google.android.material:material:1.5.0'
 
     testImplementation 'junit:junit:4.13.2'
