--- a/todoc-master/app/build.gradle
+++ b/todoc-master/app/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     gradle.projectsEvaluated {
@@ -46,8 +46,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
 
     testImplementation 'junit:junit:4.13.2'
-
     testImplementation 'org.mockito:mockito-core:3.11.1'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.test:core:1.4.0'
