--- a/todoc-master/app/build.gradle
+++ b/todoc-master/app/build.gradle
@@ -9,7 +9,8 @@ android {
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        testInstrumentationRunnerArguments clearPackageData: 'true'
     }
 
     gradle.projectsEvaluated {
@@ -29,6 +30,10 @@ android {
         disable 'RestrictedApi'
     }
 
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+    }
+    
     compileOptions {
         coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -54,8 +59,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'androidx.test:rules:1.4.1-alpha04'
-    androidTestImplementation 'androidx.test:runner:1.5.0-alpha01'
     androidTestUtil 'androidx.test:orchestrator:1.4.1'
 }
 
